PD-17: changed method of exporting file to JSON and csv